--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTF: Webpack starter kit</title>
+    <title>My Editor</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -16,6 +16,6 @@
       <button class="header__button-load">Load</button>
       <button class="header__button-save">Save</button>
     </main>
-    <script src="../src/js/index.js"></script>
+    <script type="module" src="/src/js/index.js"></script>
   </body>
 </html>
